--- a/package.json
+++ b/package.json
@@ -52,5 +52,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.5.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 18.2.6.",
+  "main": "db.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
